--- a/2-ClubPlugin/SeasonVI/SeasonVI.vcxproj
+++ b/2-ClubPlugin/SeasonVI/SeasonVI.vcxproj
@@ -159,7 +159,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AntiLagS15.h" />
     <ClInclude Include="AntiLagS17.h" />
+    <ClInclude Include="Camera3dS15.h" />
     <ClInclude Include="Camera3dS17.h" />
     <ClInclude Include="CCRC32.h" />
     <ClInclude Include="Clock.h" />
@@ -171,7 +173,9 @@
     <ClInclude Include="FileCheck.h" />
     <ClInclude Include="FileProtect.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="HookKBS15.h" />
     <ClInclude Include="HookKBS17.h" />
+    <ClInclude Include="HookMSS15.h" />
     <ClInclude Include="HookMSS17.h" />
     <ClInclude Include="ListManager.h" />
     <ClInclude Include="Log.h" />
@@ -212,17 +216,21 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="SimpleModules.h" />
     <ClInclude Include="SplashScreen.h" />
+    <ClInclude Include="SwitchKBS15.h" />
     <ClInclude Include="SwitchKBS17.h" />
     <ClInclude Include="Thread.h" />
     <ClInclude Include="Themida\ThemidaSDK.h" />
     <ClInclude Include="Themida\Via ASM module\SecureEngineMacros.h" />
     <ClInclude Include="ThreadCheck.h" />
+    <ClInclude Include="ThreadS15.h" />
     <ClInclude Include="ThreadS17.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="WindowCheck.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AntiLagS15.cpp" />
     <ClCompile Include="AntiLagS17.cpp" />
+    <ClCompile Include="Camera3dS15.cpp" />
     <ClCompile Include="Camera3dS17.cpp" />
     <ClCompile Include="CCRC32.cpp" />
     <ClCompile Include="Clock.cpp" />
@@ -232,7 +240,9 @@
     <ClCompile Include="Features.cpp" />
     <ClCompile Include="FileCheck.cpp" />
     <ClCompile Include="FileProtect.cpp" />
+    <ClCompile Include="HookKBS15.cpp" />
     <ClCompile Include="HookKBS17.cpp" />
+    <ClCompile Include="HookMSS15.cpp" />
     <ClCompile Include="HookMSS17.cpp" />
     <ClCompile Include="ListManager.cpp" />
     <ClCompile Include="Log.cpp" />
@@ -277,9 +287,11 @@
     <ClCompile Include="ProtocolS8.cpp" />
     <ClCompile Include="SimpleModules.cpp" />
     <ClCompile Include="SplashScreen.cpp" />
+    <ClCompile Include="SwitchKBS15.cpp" />
     <ClCompile Include="SwitchKBS17.cpp" />
     <ClCompile Include="Thread.cpp" />
     <ClCompile Include="ThreadCheck.cpp" />
+    <ClCompile Include="ThreadS15.cpp" />
     <ClCompile Include="ThreadS17.cpp" />
     <ClCompile Include="Util.cpp" />
     <ClCompile Include="WindowCheck.cpp" />
