--- a/2-ClubPlugin/SeasonVI/SeasonVI.vcxproj.filters
+++ b/2-ClubPlugin/SeasonVI/SeasonVI.vcxproj.filters
@@ -130,6 +130,15 @@
     <Filter Include="Source Files\Features\AntiLag\S17">
       <UniqueIdentifier>{d6803ce1-ba2e-4109-b900-b638973b478a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Features\AntiLag\S15">
+      <UniqueIdentifier>{f8433964-8ceb-46eb-98dd-992b0a84acf3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Features\Camera3D\S15">
+      <UniqueIdentifier>{e9bc8179-4307-495d-a9f3-2a25712452da}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Features\Hook_KB_MS\S15">
+      <UniqueIdentifier>{be422a28-d339-4e1e-9902-b3b43af4fc5e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -315,6 +324,24 @@
     <ClInclude Include="Features.h">
       <Filter>Source Files\Features</Filter>
     </ClInclude>
+    <ClInclude Include="AntiLagS15.h">
+      <Filter>Source Files\Features\AntiLag\S15</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera3dS15.h">
+      <Filter>Source Files\Features\Camera3D\S15</Filter>
+    </ClInclude>
+    <ClInclude Include="HookKBS15.h">
+      <Filter>Source Files\Features\Hook_KB_MS\S15</Filter>
+    </ClInclude>
+    <ClInclude Include="HookMSS15.h">
+      <Filter>Source Files\Features\Hook_KB_MS\S15</Filter>
+    </ClInclude>
+    <ClInclude Include="SwitchKBS15.h">
+      <Filter>Source Files\Features\Hook_KB_MS\S15</Filter>
+    </ClInclude>
+    <ClInclude Include="ThreadS15.h">
+      <Filter>Source Files\Protocol\S15</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -484,6 +511,24 @@
     </ClCompile>
     <ClCompile Include="Features.cpp">
       <Filter>Source Files\Features</Filter>
+    </ClCompile>
+    <ClCompile Include="AntiLagS15.cpp">
+      <Filter>Source Files\Features\AntiLag\S15</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera3dS15.cpp">
+      <Filter>Source Files\Features\Camera3D\S15</Filter>
+    </ClCompile>
+    <ClCompile Include="HookKBS15.cpp">
+      <Filter>Source Files\Features\Hook_KB_MS\S15</Filter>
+    </ClCompile>
+    <ClCompile Include="HookMSS15.cpp">
+      <Filter>Source Files\Features\Hook_KB_MS\S15</Filter>
+    </ClCompile>
+    <ClCompile Include="SwitchKBS15.cpp">
+      <Filter>Source Files\Features\Hook_KB_MS\S15</Filter>
+    </ClCompile>
+    <ClCompile Include="ThreadS15.cpp">
+      <Filter>Source Files\Protocol\S15</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
