--- a/1-ServerClub/ServerPlugin.ini
+++ b/1-ServerClub/ServerPlugin.ini
@@ -27,3 +27,13 @@ Func13 = 3
 Func14 = 9
 Func15 = 5
 Func16 = 27
+
+[ConfigCustomS6]
+PetSafeZoneHorse = 0
+PetSafeZoneDinorant = 0
+PetSafeZoneFenrir = 0
+ActiveNameServer = 0
+Name1Server = Custom1Name
+Name2Server = Custom2Name
+Name3Server = Custom3Name
+Name4Server = Custom4Name
