--- a/2-ClubPlugin/SeasonVI/SeasonVI.vcxproj
+++ b/2-ClubPlugin/SeasonVI/SeasonVI.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="Font.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GuildIcoS6.h" />
+    <ClInclude Include="HealthBarS6.h" />
     <ClInclude Include="HookKBS15.h" />
     <ClInclude Include="HookKBS17.h" />
     <ClInclude Include="HookKBS6.h" />
@@ -230,6 +231,7 @@
     <ClInclude Include="ProtocolS4.h" />
     <ClInclude Include="ProtocolS6.h" />
     <ClInclude Include="ProtocolS8.h" />
+    <ClInclude Include="RankUserS6.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SimpleModules.h" />
     <ClInclude Include="SpeedCheck.h" />
@@ -272,6 +274,7 @@
     <ClCompile Include="FileProtect.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="GuildIcoS6.cpp" />
+    <ClCompile Include="HealthBarS6.cpp" />
     <ClCompile Include="HookKBS15.cpp" />
     <ClCompile Include="HookKBS17.cpp" />
     <ClCompile Include="HookKBS6.cpp" />
@@ -322,6 +325,7 @@
     <ClCompile Include="ProtocolS4.cpp" />
     <ClCompile Include="ProtocolS6.cpp" />
     <ClCompile Include="ProtocolS8.cpp" />
+    <ClCompile Include="RankUserS6.cpp" />
     <ClCompile Include="SimpleModules.cpp" />
     <ClCompile Include="SpeedCheck.cpp" />
     <ClCompile Include="SplashScreen.cpp" />
